<package>
  <name>bag_synchronizer</name>
  <version>1.2.4</version>
  <description>
    This package provides bag synchronizer.
  </description>
  <maintainer email="carraromarco89@gmail.com">Marco Carraro</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/foo_core</url>
  <author>Marco Carraro</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>